[package]
name = "crooked_earth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = { version = "0.13.2" , features = ["dynamic_linking", "jpeg"]} # 
bevy-inspector-egui = "0.24.0"
bevy_egui = "0.27.0"
bevy_framepace = "0.15.0"
bevy_screen_diagnostics = "0.5.0"
bevy_trackball = {version="0.5.0", features=["bevy_egui"]}
big_space = "0.6.0"
egui = "0.27.2"
image = "0.24.9"
rand = "0.8.5"
reqwest = "0.12.4"
tokio = {version="1.37.0", features=["rt-multi-thread", "full"]}
# bevy_web_asset = {path = "./lib/bevy_web_asset-main"}

[workspace]
resolver = "2"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
