[package]
name = "crooked_earth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = { version = "0.13.2" , features = ["dynamic_linking", "jpeg", "trace_tracy"]} # 
bevy-inspector-egui = "0.24.0"
bevy_egui = {version="0.27.0"}
bevy_framepace = "0.15.0"
bevy_screen_diagnostics = "0.5.0"
# bevy_trackball = {version="0.5.0", features=["bevy_egui"]}
big_space = "0.6.0"
bytes = "1.6.0"
crossbeam-channel = "0.5.12"
# egui = "0.26.2"
image = "0.24.9"
rand = "0.8.5"
reqwest = {version="0.12.4", features = ["json", "blocking"]}
serde = "1.0.201"
tokio = {version="1.37.0", features=["rt-multi-thread", "full"]}
rayon = "1.10.0"
itertools = "0.12.1"
# bevy_web_asset = {path = "./lib/bevy_web_asset-main"}

[workspace]
resolver = "2"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
