[package]
name = "osm_tile_downloader"
description = ""
version = "0.1.2"
authors = [""]
edition = "2021"

repository = "https://github.com/NeoLegends/osm-tile-downloader"
keywords = ["open", "street", "map", "osm", "tile"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.82"
# clap = {version = "4.5.4", features=["cargo"]}
futures = "0.3.30"
image = "0.25.1"
indicatif = "0.17.8"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["stream"] }
rocket = "0.5.0"
serde = "1.0.197"
strfmt = "0.2.4"
tokio = { version = "1.37.0", features = ["fs", "macros",  "time", "rt-multi-thread", "process"] }
toml = "0.8.12"
sled = "0.34.7"
typed-sled = "0.2.3"
async-tempfile = "0.5.0"
rocket_dyn_templates = {version="0.1.0", features=["tera", "handlebars"]}
urlencoding = "2.1.3"
serde_json = "1.0.115"
geojson = "0.24.1"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
