[package]
name = "scylla_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
catalytic = "0.1"
catalytic_table_to_struct = "0.1"
dotenvy = "0.15.7"

[dependencies]
catalytic = "0.1"
catalytic_macro = "0.1"
rand = "0.8.5"
scylla = "0.11"
tokio = "1.37.0"
tracing = "0.1"
tracing-subscriber = "0.3"
